--- a/fallen/Fallen.vcxproj
+++ b/fallen/Fallen.vcxproj
@@ -102,7 +102,8 @@
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(SolutionDir)\..\openal-soft\bin\Win32\soft_oal.dll" "$(TargetDir)\openal32.dll"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -150,7 +151,8 @@
       <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
     <PostBuildEvent>
-      <Command>REM copy "$(SolutionDir)\..\openal-soft\bin\Win32\soft_oal.dll" "$(TargetDir)\openal32.dll"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
