--- a/fallen/Fallen.vcxproj
+++ b/fallen/Fallen.vcxproj
@@ -52,7 +52,7 @@
     <OutDir>.\Debug\</OutDir>
     <IntDir>.\Debug\</IntDir>
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\MFStdLib\Headers;$(IncludePath)</IncludePath>
+    <IncludePath>..\MFStdLibrary2\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -282,17 +282,6 @@
     <ClCompile Include="Ledit\Source\ed.cpp" />
     <ClCompile Include="Ledit\Source\gi.cpp" />
     <ClCompile Include="Ledit\Source\ledit.cpp" />
-    <ClCompile Include="outro\back.cpp" />
-    <ClCompile Include="outro\cam.cpp" />
-    <ClCompile Include="outro\credits.cpp" />
-    <ClCompile Include="outro\imp.cpp" />
-    <ClCompile Include="outro\mf.cpp" />
-    <ClCompile Include="outro\os.cpp" />
-    <ClCompile Include="outro\outroFont.cpp" />
-    <ClCompile Include="outro\outroMain.cpp" />
-    <ClCompile Include="outro\outroMatrix.cpp" />
-    <ClCompile Include="outro\OutroTga.cpp" />
-    <ClCompile Include="outro\wire.cpp" />
     <ClCompile Include="Source\Anim.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'"> /D /NODEFAULTLIB:libcmtd.lib" "  /D /NODEFAULTLIB:libcmtd.lib" "</AdditionalOptions>
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'"> /D /NODEFAULTLIB:libcmtd.lib" "  /D /NODEFAULTLIB:libcmtd.lib" "</AdditionalOptions>
@@ -704,7 +693,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\MFStdLib\Headers\MFStdLib.h" />
     <ClInclude Include="DDEngine\Headers\aa.h" />
     <ClInclude Include="DDEngine\Headers\aeng.h" />
     <ClInclude Include="DDEngine\Headers\BreakTimer.h" />
@@ -968,22 +956,6 @@
     <ClInclude Include="Ledit\Headers\ed.h" />
     <ClInclude Include="Ledit\Headers\gi.h" />
     <ClInclude Include="Ledit\Headers\ledit.h" />
-    <ClInclude Include="outro\Always.h" />
-    <ClInclude Include="outro\back.h" />
-    <ClInclude Include="outro\cam.h" />
-    <ClInclude Include="outro\checker.h" />
-    <ClInclude Include="outro\credits.h" />
-    <ClInclude Include="outro\font.h" />
-    <ClInclude Include="outro\imp.h" />
-    <ClInclude Include="outro\Key.h" />
-    <ClInclude Include="outro\lmap.h" />
-    <ClInclude Include="outro\Matrix.h" />
-    <ClInclude Include="outro\mf.h" />
-    <ClInclude Include="outro\midasdll.h" />
-    <ClInclude Include="outro\os.h" />
-    <ClInclude Include="outro\slap.h" />
-    <ClInclude Include="outro\Tga.h" />
-    <ClInclude Include="outro\wire.h" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="DDLibrary\arrowcop.cur" />
@@ -1007,6 +979,11 @@
   <ItemGroup>
     <ProjectReference Include="..\MFStdLibrary2\MFStdLibrary2.vcxproj">
       <Project>{5d2cafb5-edfa-4e63-8f63-af57c5cf5e3b}</Project>
+      <UseLibraryDependencyInputs>true</UseLibraryDependencyInputs>
+    </ProjectReference>
+    <ProjectReference Include="..\outroLib\outroLib.vcxproj">
+      <Project>{ff117fc4-d2c8-457f-a275-ff87533e7f3e}</Project>
+      <UseLibraryDependencyInputs>true</UseLibraryDependencyInputs>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
